--- a/wp-content/themes/responsive-wp/style.css
+++ b/wp-content/themes/responsive-wp/style.css
@@ -2,9 +2,9 @@
 Theme Name: Responsive WP
 Theme URI: http://underscores.me/
 Author: Tracy Rotton
-Author URI: http://taupecat.com
+Author URI: http://responsivewptheming.com
 Description: Description
-Version: 1.0-wpcom
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: responsive-wp
@@ -13,7 +13,7 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
- Responsive WP is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
+Responsive WP is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 
 Resetting and rebuilding styles have been helped along thanks to the fine work of
 Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
