--- a/wp-content/themes/responsive-wp/sass/variables-site/_typography.scss
+++ b/wp-content/themes/responsive-wp/sass/variables-site/_typography.scss
@@ -1,5 +1,13 @@
-$font__main: sans-serif;
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic|Open+Sans:400italic,700italic,400,700);
+
+$font__main: "Open Sans", sans-serif;
+$font__alt: "Droid Serif", serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+$font-weight__normal: 400;
+$font-weight__bold: 700;
+
+$font-size__default: 10px;
