continued the theme building process

--- a/wp-content/themes/responsive-wp/sass/mixins/_mixins-master.scss
+++ b/wp-content/themes/responsive-wp/sass/mixins/_mixins-master.scss
@@ -21,8 +21,8 @@
 	clear: both;
 }
 
-@mixin highlight {
-	background-color: transparentize( magenta, 0.8 );
+@mixin highlight( $hue-adjust: 0 ) {
+	background-color: transparentize( hsl( ( 300 + $hue-adjust ), 100%, 50% ), 0.8 );
 }
 
 @mixin hover-state {
