--- a/wp-content/themes/responsive-wp/sass/variables-site/_colors.scss
+++ b/wp-content/themes/responsive-wp/sass/variables-site/_colors.scss
@@ -1,5 +1,8 @@
 $black: #111;
 $white: #fff;
+$red: #900;
+$red-light: #bf0000;
+$gray: #626262;
 
 $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
@@ -11,10 +14,10 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__link: $red;
+$color__link-visited: $gray;
+$color__link-hover: $red-light;
+$color__text-main: $black;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
