--- a/wp-content/themes/responsive-wp/sass/variables-site/_settings.scss
+++ b/wp-content/themes/responsive-wp/sass/variables-site/_settings.scss
@@ -1,4 +1,8 @@
 /** Breakpoints */
 $bp-medium: 600px;
 
-$breakpoint-to-ems: true
+$breakpoint-to-ems: true;
+
+
+/** Hover Timing */
+$hover-timing: 100ms;
