--- a/wp-content/themes/responsive-wp/sass/navigation/_navigation.scss
+++ b/wp-content/themes/responsive-wp/sass/navigation/_navigation.scss
@@ -7,3 +7,8 @@
 5.2 Menus
 --------------------------------------------------------------*/
 @import "menus";
+
+/*--------------------------------------------------------------
+Paging Navigation
+--------------------------------------------------------------*/
+@import "paging-navigation";
