Linked the footer partial

--- a/wp-content/themes/responsive-wp/sass/responsive-wp.scss
+++ b/wp-content/themes/responsive-wp/sass/responsive-wp.scss
@@ -113,4 +113,6 @@ and Blueprint http://www.blueprintcss.org/
 /*--------------------------------------------------------------
 Custom partials
 --------------------------------------------------------------*/
-@import "header";
+@import
+	"header",
+	"footer";
