--- a/wp-content/themes/responsive-wp/sass/variables-site/_colors.scss
+++ b/wp-content/themes/responsive-wp/sass/variables-site/_colors.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $red: #900;
 $red-light: #bf0000;
 $gray: #626262;
+$gray-light: #e5e5e5;
 
 $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
