--- a/wp-content/themes/responsive-wp/sass/_placeholders.scss
+++ b/wp-content/themes/responsive-wp/sass/_placeholders.scss
@@ -1,6 +1,11 @@
-%side-padding {
-	padding: {
-		left: percentage( 10px / 320px );
-		right: percentage( 10px / 320px );
+%clearfix {
+	&::before,
+	&::after {
+		content: "";
+		display: table;
+	}
+
+	&::after {
+		clear: both;
 	}
 }
