--- a/wp-content/themes/responsive-wp/sass/mixins/_mixins-master.scss
+++ b/wp-content/themes/responsive-wp/sass/mixins/_mixins-master.scss
@@ -32,3 +32,10 @@
 		@content;
 	}
 }
+
+@mixin side-padding {
+	padding: {
+		left: percentage( 10px / 320px );
+		right: percentage( 10px / 320px );
+	}
+}
