--- a/wp-content/themes/responsive-wp/sass/_footer.scss
+++ b/wp-content/themes/responsive-wp/sass/_footer.scss
@@ -1,5 +1,4 @@
 .site-footer {
-	@extend %side-padding;
 	background-color: $black;
 	color: $white;
 	font-weight: $font-weight__bold;
@@ -8,6 +7,7 @@
 		bottom: 1em;
 	}
 	text-transform: uppercase;
+	@include side-padding;
 
 	a {
 		color: $white;
