--- a/wp-content/themes/responsive-wp/sass/layout/_content-sidebar.scss
+++ b/wp-content/themes/responsive-wp/sass/layout/_content-sidebar.scss
@@ -1,20 +1,14 @@
-.content-area {
-	float: left;
-	margin: 0 (-$size__site-sidebar) 0 0;
-	width: $size__site-main;
-}
+@include breakpoint( $bp-medium ) {
 
-.site-main {
-	margin: 0 $size__site-sidebar 0 0;
-}
+	.site-content {
+		@include side-padding;
 
-.site-content .widget-area {
-	float: right;
-	overflow: hidden;
-	width: $size__site-sidebar;
-}
+		.content-area {
+			@include span(8);
+		}
 
-.site-footer {
-	clear: both;
-	width: $size__site-main;
+		.widget-area {
+			@include span(4 last);
+		}
+	}
 }
