--- a/wp-content/themes/responsive-wp/sass/navigation/_menus.scss
+++ b/wp-content/themes/responsive-wp/sass/navigation/_menus.scss
@@ -1,19 +1,27 @@
 .main-navigation {
+	$gradient: linear-gradient( to bottom, transparentize( #fff, 0.77 ), transparentize( #000, 0.77 ) 35px, transparentize( #000, 0.77 ) 100% );
+
 	background: {
 		color: $black;
-		image: linear-gradient( to bottom, transparentize( #fff, 0.77 ), transparentize( #000, 0.77 ) 35px, transparentize( #000, 0.77 ) 100% );
+		image: $gradient;
 	}
 	clear: both;
 	display: block;
-	float: left;
 	margin-bottom: 1.5em;
 	width: 100%;
 
 	.nav-menu {
+		@extend %clearfix;
 		background-color: $black;
 		display: none;
 		position: absolute;
 		width: 100%;
+
+		@include breakpoint( $bp-header ) {
+			background-image: $gradient;
+			display: block;
+			position: static;
+		}
 	}
 
 	&.toggled {
@@ -26,6 +34,10 @@
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
+
+		@include breakpoint( $bp-medium ) {
+			@include side-padding;
+		}
 
 		ul {
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
@@ -65,15 +77,25 @@
 	li {
 		position: relative;
 
-		@include breakpoint( $bp-medium ) {
+		@include breakpoint( $bp-header ) {
 			float: left;
 		}
 
 		&:hover > a {
 		}
+
+		@include breakpoint( $bp-medium ) {
+
+			&:first-child a {
+				padding-left: 0;
+			}
+
+			&:last-child a {
+				padding-right: 0;
+			}
+		}
 	}
 	a {
-		@extend %side-padding;
 		border-top: 1px solid transparentize( $white, 0.8 );
 		color: mix( #000, $white, 10% );
 		display: block;
@@ -85,10 +107,21 @@
 			decoration: none;
 			transform: uppercase;
 		}
+		white-space: nowrap;
 		@include font-size(1.4);
+		@include side-padding;
 
 		@include hover-state {
 			color: $white;
+		}
+
+		@include breakpoint( $bp-header ) {
+			border-top: none;
+			color: $white;
+			padding: {
+				left: 0.5em;
+				right: 0.5em;
+			}
 		}
 	}
 
@@ -101,7 +134,6 @@
 .menu-toggle {
 	background: none;
 	border: none;
-	border: radius;
 	box-shadow: none;
 	color: $white;
 	height: 35px;
@@ -123,7 +155,6 @@
 	}
 
 	&::after {
-		@extend %side-padding;
 		content: "\f419";
 		font: {
 			family: Genericons;
@@ -139,9 +170,10 @@
 		}
 		top: 0;
 		width: 100%;
+		@include side-padding;
 	}
 
-	@include breakpoint( $bp-medium ) {
+	@include breakpoint( $bp-header ) {
 		display: none;
 	}
 }
