--- a/wp-content/themes/responsive-wp/sass/responsive-wp.scss
+++ b/wp-content/themes/responsive-wp/sass/responsive-wp.scss
@@ -49,6 +49,7 @@ and Blueprint http://www.blueprintcss.org/
 @import "mixins/mixins-master";
 @import "placeholders";
 @import "breakpoint";
+@import "susy";
 
 /*--------------------------------------------------------------
 1.0 Reset
@@ -116,3 +117,8 @@ Custom partials
 @import
 	"header",
 	"footer";
+
+/*--------------------------------------------------------------
+Layout
+--------------------------------------------------------------*/
+@import "layout/content-sidebar";
